# Soil_moisture

./: .gitignore  .gitmodules  CMakeLists.txt  Node_2_Data01.csv  PyNodeLog.py  README.md  Soil_moisture_breadboard-0.8.fzz  node_2_to_02.23.21.csv  power_control_1.fzz  power_latch_1.fzz  power_latch_2.fzz  soil_moisture_breadboard_1.0.fzz  src.code-workspace  test_data_no_sd.csv  test_data_using_yield.csv
DS3231-set-time/: platformio.ini
DS3231-set-time/src/: DS3231_Set_time.cc
DS3231_Alarm_test/: DS3231_Alarm_test.ino
DS3231_Set_time/: DS3231_Set_time.ino
LoRa_Simple_Client_Arduino/: LoRa_Simple_Client_Arduino.ino
Power_latch_test/: Power_latch_test.ino
Reduce_avr_power_use/: Reduce_avr_power_use.ino
SD_Card_Info/: SD_Card_Info.ino
Soil_moisture-0.8/: Soil_moisture-0.8.ino
Soil_moisture_0.9/: Soil_moisture_0.9.ino
Soil_moisture_0.9.1/: Soil_moisture_0.9.1.ino
Soil_moisture_0.9.2/: Soil_moisture_0.9.2.ino
Soil_moisture_1.0/: Soil_moisture_1.0.ino
dragino-simple-lora-server/: dragino-simple-lora-server.ino
main-node/: platformio.ini
main-node/src/: main-node.cc
old/: soil_moisture_breadboard_1.0.fzz
old/DS3231_Set_time/: DS3231_Set_time.ino
old/LG01_ThingSpeak_RESTful_Single_Data/: G01_ThingSpeak_RESTful_Single_Data.ino
old/LoRa_Simple_Client_Arduino/: LoRa_Simple_Client_Arduino.ino
old/LoRa_Simple_Server_Yun/: LoRa_Simple_Server_Yun.ino
old/LoRa_Simple_Server_Yun-3/: LoRa_Simple_Server_Yun-3.ino
old/Power_latch_3_test/: Power_latch_3_test.ino
old/SD_Card_Info/: SD_Card_Info.ino
old/SHT31test/: SHT31test.ino
old/Soil_moisture-0.1/: Soil_moisture-0.1.ino
old/Soil_moisture-0.2/: Soil_moisture-0.2.ino
old/Soil_moisture-0.3/: Soil_moisture-0.3.ino
old/Soil_moisture-0.4/: Soil_moisture-0.4.ino
old/Soil_moisture-0.5/: Soil_moisture-0.5.ino
old/Soil_moisture-0.65/: Soil_moisture-0.65.ino
old/Soil_moisture-0.7/: Soil_moisture-0.7.ino
old/Soil_moisture_1.0/: Soil_moisture_1.0.ino
old/Soil_moisture_2_sensors/: Soil_moisture_2_sensors.ino
old/Soil_moisture_logging/: Soil_moisture_logging.ino
old/ds3231/: ds3231.ino
old/power_test/: power_test.ino
parts/: 2020-09-14T205239.xlsx  2020-09-17T225813.xlsx  Cart_Sep14_0854PM.xls  RS_Adafruit_parts.txt
pictures/: Soil-moisture-v0.7.xcf
power_test/: power_test.fzz  power_test.ino
power_test_post/: power_test_post.ino
pro-mini-simple-lora-client/: pro-mini-simple-lora-client.ino
pro-mini-simple-lora-server/: platformio.ini  pro-mini-simple-lora-server.ino
rs-simple-lora-client/: platformio.ini  rs-simple-lora-client.ino
timing/: backyard_9.12.20_2.txt  backyard_9.12.20_3.txt  backyard_9.9.20.txt  node_1_in_freezer_9.12.20.txt
timing_1/: times_2_lora.txt  times_2_lora_cad.csv  times_2_lora_start_together_add_cad.csv
timing_2/: lora_data_three_nodes.txt  lora_data_three_nodes_2.txt  time_no_cad_delay.csv
timing_3/: lora_data_three_nodes_4_orig.txt  lora_data_three_nodes_7.txt
timing_4/: README  keokirk-node-2-7.18.20.csv  keokirk-node-3-7.18.20.txt
wakeup_alarm/: wakeup_alarm.ino
(+64 files in other folders)
